--- a/stryker/App.conf.json
+++ b/stryker/App.conf.json
@@ -21,7 +21,7 @@
   },
   "testRunner": "command",
   "commandRunner": {
-    "command": "CI=true npm test 'src/App.test.js'"
+    "command": "CI=true npm test 'src/tests/App.test.js'"
   },
   "timeoutMS": 20000,
   "reporters": [
